--- a/portifolio.html
+++ b/portifolio.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> 
     <nav>
       <ul>
-        <li><a href="site.html" target="_self">Home</a></li>  
+        <li><a href="index.html" target="_self">Home</a></li>  
         <li><a href="sobre.html" target="_self">Sobre</a></li>
         <li><a href="portifolio.html" target="_self">Portifólio</a></li>
         <li><a href="contato.html" target="_self">Contato</a></li>
