--- a/portifolio.html
+++ b/portifolio.html
@@ -33,22 +33,22 @@
     <div class="container">
     	<div class="mySlides">
       	<div class="numbertext">1 / 4</div>
-    		<img src="ARS.png" alt="Análise de redes sociais">
+    		<img src="ARS.png" style="width:100%" alt="Análise de redes sociais">
     	</div>
 
     	<div class="mySlides">
       	<div class="numbertext">2 / 4</div>
-      	<img src="batman.png" alt="Desenho pixel">
+      	<img src="batman.png" style="width:100%" alt="Desenho pixel">
   	  </div>
 
     	<div class="mySlides">
       	<div class="numbertext">3 / 4</div>
-     		<img src="jogaDado.jpg" alt="programa em P5js">
+     		<img src="jogaDado.jpg" style="width:100%" alt="programa em P5js">
     	</div>
 
     	<div class="mySlides">
       	<div class="numbertext">4 / 4</div>
-    		<img src="web.jpg" alt="plataforma educacional">
+    		<img src="web.jpg" style="width:100%" alt="plataforma educacional">
     	</div>
 
     	
